syntax = "proto3";

package paperless.service.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// Category Service - manages category hierarchy for document organization
service PaperlessCategoryService {
  // Create a new category
  rpc CreateCategory(CreateCategoryRequest) returns (CreateCategoryResponse) {
    option (google.api.http) = {
      post: "/v1/categories"
      body: "*"
    };
  }

  // Get a category by ID
  rpc GetCategory(GetCategoryRequest) returns (GetCategoryResponse) {
    option (google.api.http) = {
      get: "/v1/categories/{id}"
    };
  }

  // List categories in a parent category (or root if no parent specified)
  rpc ListCategories(ListCategoriesRequest) returns (ListCategoriesResponse) {
    option (google.api.http) = {
      get: "/v1/categories"
    };
  }

  // Update category metadata
  rpc UpdateCategory(UpdateCategoryRequest) returns (UpdateCategoryResponse) {
    option (google.api.http) = {
      put: "/v1/categories/{id}"
      body: "*"
    };
  }

  // Delete a category (must be empty by default)
  rpc DeleteCategory(DeleteCategoryRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/v1/categories/{id}"
    };
  }

  // Move a category to a new parent
  rpc MoveCategory(MoveCategoryRequest) returns (MoveCategoryResponse) {
    option (google.api.http) = {
      post: "/v1/categories/{id}/move"
      body: "*"
    };
  }

  // Get the category tree structure
  rpc GetCategoryTree(GetCategoryTreeRequest) returns (GetCategoryTreeResponse) {
    option (google.api.http) = {
      get: "/v1/categories/tree"
    };
  }
}

// Category entity
message Category {
  string id = 1 [json_name = "id"];
  uint32 tenant_id = 2 [json_name = "tenantId"];
  optional string parent_id = 3 [json_name = "parentId"];
  string name = 4 [json_name = "name"];
  string path = 5 [json_name = "path"];
  string description = 6 [json_name = "description"];
  int32 depth = 7 [json_name = "depth"];
  int32 sort_order = 8 [json_name = "sortOrder"];
  int32 document_count = 9 [json_name = "documentCount"];
  int32 subcategory_count = 10 [json_name = "subcategoryCount"];
  google.protobuf.Timestamp create_time = 11 [json_name = "createTime"];
  google.protobuf.Timestamp update_time = 12 [json_name = "updateTime"];
  optional uint32 created_by = 13 [json_name = "createdBy"];
}

// Request to create a category
message CreateCategoryRequest {
  // Parent category ID (null for root-level category)
  optional string parent_id = 1 [
    json_name = "parentId",
    (buf.validate.field).string = {
      min_len: 0
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];

  // Category name
  string name = 2 [
    json_name = "name",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
      pattern: "^[a-zA-Z0-9][a-zA-Z0-9\\-_\\.\\s]*$"
    }
  ];

  // Optional description
  string description = 3 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 1024}
  ];

  // Sort order (lower numbers appear first)
  int32 sort_order = 4 [json_name = "sortOrder"];
}

message CreateCategoryResponse {
  Category category = 1 [json_name = "category"];
}

// Request to get a category
message GetCategoryRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // Include document count
  bool include_counts = 2 [json_name = "includeCounts"];
}

message GetCategoryResponse {
  Category category = 1 [json_name = "category"];
}

// Request to list categories
message ListCategoriesRequest {
  // Parent category ID (null for root-level categories)
  optional string parent_id = 1 [
    json_name = "parentId",
    (buf.validate.field).string = {
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];

  // Pagination
  optional uint32 page = 2 [json_name = "page"];
  optional uint32 page_size = 3 [json_name = "pageSize"];

  // Search by name
  optional string name_filter = 4 [json_name = "nameFilter"];
}

message ListCategoriesResponse {
  repeated Category categories = 1 [json_name = "categories"];
  uint32 total = 2 [json_name = "total"];
}

// Request to update a category
message UpdateCategoryRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // New name (optional)
  optional string name = 2 [
    json_name = "name",
    (buf.validate.field).string = {
      min_len: 1
      max_len: 255
      pattern: "^[a-zA-Z0-9][a-zA-Z0-9\\-_\\.\\s]*$"
    }
  ];

  // New description (optional)
  optional string description = 3 [
    json_name = "description",
    (buf.validate.field).string = {max_len: 1024}
  ];

  // New sort order (optional)
  optional int32 sort_order = 4 [json_name = "sortOrder"];
}

message UpdateCategoryResponse {
  Category category = 1 [json_name = "category"];
}

// Request to delete a category
message DeleteCategoryRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // Force delete even if category contains items
  bool force = 2 [json_name = "force"];
}

// Request to move a category
message MoveCategoryRequest {
  string id = 1 [
    json_name = "id",
    (google.api.field_behavior) = REQUIRED,
    (buf.validate.field).string = {
      min_len: 1
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]+$"
    }
  ];

  // New parent category ID (null to move to root)
  optional string new_parent_id = 2 [
    json_name = "newParentId",
    (buf.validate.field).string = {
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];
}

message MoveCategoryResponse {
  Category category = 1 [json_name = "category"];
}

// Request to get category tree
message GetCategoryTreeRequest {
  // Root category ID (null for entire tree)
  optional string root_id = 1 [
    json_name = "rootId",
    (buf.validate.field).string = {
      max_len: 36
      pattern: "^[a-fA-F0-9\\-]*$"
    }
  ];

  // Maximum depth to retrieve
  optional int32 max_depth = 2 [
    json_name = "maxDepth",
    (buf.validate.field).int32 = {gte: 1, lte: 20}
  ];

  // Include document counts
  bool include_counts = 3 [json_name = "includeCounts"];
}

// Category tree node
message CategoryTreeNode {
  Category category = 1 [json_name = "category"];
  repeated CategoryTreeNode children = 2 [json_name = "children"];
}

message GetCategoryTreeResponse {
  repeated CategoryTreeNode roots = 1 [json_name = "roots"];
}
